kubernetes-deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: vets-api
spec:
  replicas: 2
  selector:
    matchLabels:
      type: api
      service: vets
  template:
    metadata:
      labels:
        type: api
        service: vets
        language: go
    spec:
      containers:
      - name: api
        image: albertocrespo86/node-kubernetes-test
        

---

apiVersion: v1
kind: Service
metadata:
  name: vets-api
spec:
  type: NodePort
  ports:
  - port: 4444
  selector:
    type: api
    service: vets
