kubernetes-toolkit-dev.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: devops-toolkit
spec:
  replicas: 3
  selector:
    matchLabels:
      type: frontend
      service: devops-toolkit
  template:
    metadata:
      labels:
        type: frontend
        service: devops-toolkit
    spec:
      containers:
      - name: frontend
        image: albertocrespo86/node-kubernetes-test

---

apiVersion: v1
kind: Service
metadata:
  name: devops-toolkit
spec:
  type: NodePort
  ports:
  - port: 4444
  selector:
    type: frontend
    service: devops-toolkit
