kubernetes-conf-no-local-mongodb-dom.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vets
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  backend:
      serviceName: vets-service
      servicePort: 4444

---

apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: vets-api
spec:
  replicas: 2
  selector:
    matchLabels:
      type: api
      service: vets-service
  template:
    metadata:
      labels:
        type: api
        service: vets-service
    spec:
      containers:
      - name: api
        image: albertocrespo86/node-kubernetes-test
        resources:
          limits:
            memory: "10Mi"
            cpu: 0.1
          requests:
            memory: "5Mi"
            cpu: 0.01

---

apiVersion: v1
kind: Service
metadata:
  name: vets-service
spec:
  type: NodePort
  ports:
  - port: 4444
  selector:
    type: api
    service: vets-service
