kubernetes-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vets
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /api
        backend:
          serviceName: vets-api
          servicePort: 4444
      - path: /jenkins
        backend:
          serviceName: jenkins
          servicePort: 8080

---

apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: vets-api
spec:
  replicas: 2
  selector:
    matchLabels:
      type: api
      service: vets
  template:
    metadata:
      labels:
        type: api
        service: vets
        language: go
    spec:
      containers:
      - name: api
        image: albertocrespo86/node-kubernetes-test
    resources:
          limits:
            memory: "10Mi"
            cpu: 0.1
          requests:
            memory: "5Mi"
            cpu: 0.01    

---

apiVersion: v1
kind: Service
metadata:
  name: vets-api
spec:
  type: NodePort
  ports:
  - port: 4444
  selector:
    type: api
    service: vets


---

apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: jenkins
spec:
  selector:
    matchLabels:
      type: master
      service: jenkins
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        type: master
        service: jenkins
    spec:
      containers:
      - name: jenkins
        image: vfarcic/jenkins
        volumeMounts:
        - name: jenkins-home
          mountPath: /var/jenkins_home
        - name: jenkins-creds
          mountPath: /etc/secrets
      volumes:
      - name: jenkins-home
        emptyDir: {}
      - name: jenkins-creds
        secret:
          secretName: my-creds
      resources:
          limits:
            memory: "15Mi"
            cpu: 0.1
          requests:
            memory: "5Mi"
            cpu: 0.01
---

apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  ports:
  - port: 8080
  selector:
    type: master
    service: jenkins
